[package]
name = "amethyst-rhusics"
version = "0.1.0"
authors = ["Simon Rönnberg <seamonr@gmail.com>"]

repository = "https://github.com/amethyst/amethyst-rhusics.git"
homepage = "https://github.com/amethyst/amethyst-rhusics.git"

license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/amethyst-rhusics"
description = "Integration of `amethyst` and `rhusics`"

keywords = ["gamedev", "amethyst", "physics"]

[dependencies]
amethyst_core = { version = "0.1.0", git = "https://github.com/amethyst/amethyst", branch = "develop" }
amethyst_renderer = { version = "0.6.1", git = "https://github.com/amethyst/amethyst", branch = "develop" }
rhusics-ecs = { git = "https://github.com/rustgd/rhusics", branch = "master" }
rhusics-core = { git = "https://github.com/rustgd/rhusics", branch = "master" }
rhusics-transform = { git = "https://github.com/rustgd/rhusics", branch = "master" }
specs = "0.10"
shrev = "0.8"
collision = { version = "0.15", features = ["eders"]}

[dev-dependencies]
amethyst = { version = "0.6.0", git = "https://github.com/amethyst/amethyst", branch = "develop" }
genmesh = "0.5"
rand = "0.3"
